data/derived/comb/progs/unify/prog0134.ml.out
Characters 72-73:
  | h::t -> (a h) + myFunc f 0 t;;
                             ^
Error: This expression has type int but an expression was expected of type
         'a -> int
